EVA-112 Feat: Se muestra el nombre completo del usuario en el index de contratos.

--- a/Proyectos/templates/Proyectos/Contrato/index.html
+++ b/Proyectos/templates/Proyectos/Contrato/index.html
@@ -55,7 +55,7 @@
                                                         <td>{{ contrato.cliente}}</td>
                                                         <td>{{ contrato.numero_contrato }}</td>
                                                         <td>{{ contrato.anho}}</td>
-                                                        <td>{{ contrato.residente }}</td>
+                                                        <td>{{ contrato.residente.get_full_name }}</td>
                                                         <td>{{ contrato.fecha_suscripcion|date:'Y-m-d' }}</td>
                                                         <td>{{ contrato.valor|intcomma }}</td>
                                                         <td>{{ contrato.plazo_ejecucion }}</td>
