--- a/SGI/templates/SGI/_common/menu_aplicacion.html
+++ b/SGI/templates/SGI/_common/menu_aplicacion.html
@@ -8,8 +8,7 @@
             <li {% if menu_actual == 'busqueda' %} class="active" {% endif %}>
                 <a href="#" title="Ingrese su Búsqueda">
                     <div>
-                        <form action="{% url 'SGI:documentos-buscar' %}" method="post" id="form_busqueda">
-                            {% csrf_token %}
+                        <form action="{% url 'SGI:documentos-buscar' %}" method="get" id="form_busqueda">
                             <div class="input-group">
                                 <input type="search" class="form-control form-control-md shadow-inset-2" placeholder="Buscar" name="texto_busqueda" id="texto_busqueda" value="{{ texto_busqueda }}">
                                 <div class="input-group-append">
