EVA-117 fix: Se soluciona el problema con el nombre de usaurios en correos masivos.
Lo que se hizo fue eliminiar el nombre del usaurio del contenido cuando este se va a enviar a varios destinatarios.

Se aprtovecho y se hizo un refactor del método construir_y_enviar_notificacion_x_email.

(cherry picked from commit 3e4c83c32bb371d00f5faeafccf4cc6330b7b21b)

--- a/Notificaciones/templates/Notificaciones/CorreoElectronico/correo.html
+++ b/Notificaciones/templates/Notificaciones/CorreoElectronico/correo.html
@@ -1,6 +1,6 @@
 <b> EVA </b>
 <br><br>
-Estimado(a) usuario: {{ nombre }}
+Estimado(a) usuario(a): {{ nombre }}
 <br>
 <h1>{{ asunto }}</h1>
 <div style="max-width: 800px;padding:20px;background:#ededed;border-radius:5px">
@@ -17,7 +17,7 @@ Estimado(a) usuario: {{ nombre }}
 {% endif %}
 </div>
 <br>
-<i>*** Si al hacer clic no no funciona, por favor, copia y pega la URL en tu navegador favorito.
+<i>*** Si al hacer clic no funciona, por favor, copia y pega la URL en tu navegador favorito.
     <br><br>
     <div style="background-color: #f9f9f9; text-align:center; font-family:'Lato','Helvetica Neue',Helvetica,Arial,sans-serif; padding:10px 5px; font-size:12px; line-height:1.2; color:#666666">
     &nbsp;Por favor no responda este correo. Este buzón de mensajes no esta monitoreado y no recibirá ninguna respuesta. </div>
