--- a/Financiero/templates/Financiero/FlujoCaja/SubtipoMovimiento/index.html
+++ b/Financiero/templates/Financiero/FlujoCaja/SubtipoMovimiento/index.html
@@ -40,7 +40,7 @@
                                                         <th>Nombre</th>
                                                         <th>Descripción</th>
                                                         <th>Tipo de Movimiento</th>
-                                                        <th>Categoria de Movimiento</th>
+                                                        <th>Categoría de Movimiento</th>
                                                         <th>Protegido</th>
                                                         <th>Estado</th>
                                                         {% if perms.Financiero.change_subtipomovimiento or perms.Financiero.delete_subtipomovimiento %}
