--- a/Financiero/templates/Financiero/_common/menu_aplicacion.html
+++ b/Financiero/templates/Financiero/_common/menu_aplicacion.html
@@ -29,7 +29,7 @@
             </a>
         </li>
         {% endif %}
-        {% if perms.TalentoHumano.view_flujos_de_caja %}
+        {% if perms.Financiero.can_gestion_flujos_de_caja %}
         <li {% if menu_actual|last == 'flujos_de_caja' %} class="active" {% endif %}>
             <a href="{% url 'Financiero:flujos-de-caja' 0 %}" title="Flujos de Caja" data-filter-tags="flujos caja">
                 <i class="fal fa-usd-square"></i>
