--- a/Financiero/templates/Financiero/_common/menu_aplicacion.html
+++ b/Financiero/templates/Financiero/_common/menu_aplicacion.html
@@ -6,7 +6,7 @@
     </a>
 </li>
 {% endif %}
-{% if perms.Financiero.view_subtipomovimiento or perms.Financiero.view_categoriamovimiento or perms.TalentoHumano.view_flujos_de_caja %}
+{% if perms.Financiero.view_subtipomovimiento or perms.Financiero.view_categoriamovimiento or perms.Financiero.can_gestion_flujos_de_caja %}
 <li {% if menu_actual|first == 'flujo_caja' %} class="active open"{% endif %}>
     <a href="#" title="Flujo de Caja" data-filter-tags="flujo caja">
         <i class="fal fa-usd-square"></i>
