--- a/Administracion/templates/Administracion/_common/menu_aplicacion.html
+++ b/Administracion/templates/Administracion/_common/menu_aplicacion.html
@@ -38,6 +38,7 @@
         {% if perms.Administracion.view_proceso %}
         <li {% if menu_actual|last == 'flujos_de_caja' %} class="active" {% endif %}>
             <a href="{% url 'Administracion:procesos' %}" title="Flujos de Caja" data-filter-tags="flujos caja">
+                <i class="subheader-icon fal fa-usd-square"></i>
                 <span class="nav-link-text" data-i18n="nav.administracion_procesos_flujos_de_caja">Flujos de Caja</span>
             </a>
         </li>
